updates styles for closer proximity to design

--- a/src/index.html
+++ b/src/index.html
@@ -62,14 +62,14 @@
 
         <!-- Presentación Personal-->
         <section id="banner" class="home">
-            <div class="container ">
+            <div class="container-fluid ">
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col text">
                         <h1 class="display-2">Rafa Gutiérrez</h1>
                         <p>Hello this is body text, Documentation and examples for common text utilities to control
                             alignment, wrapping, weight, and more.</p>
                     </div>
-                    <div class="col-sm-4"><img
+                    <div class="col-sm-4"><img class ="img-responsive"
                             src="media\road.png"
                             alt="Descripción de la imagen" />
                     </div>
@@ -82,15 +82,15 @@
 
         <!-- Skills-->
         <section id="banner" class="home">
-            <div class="container ">
+            <div class="container-fluid ">
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col-sm-8 text">
                         <h1 class="display-2">Skills</h1>
                         <p>Hello this is body text, Documentation and examples for common text utilities to control
                             alignment, wrapping, weight, and more.</p>
                     </div>
-                    <div class="col-sm-4"><img
-                            src="https://th.bing.com/th/id/OIP.eh5RRJ5l1pqHQDN1ubb1VAHaEx?rs=1&pid=ImgDetMain"
+                    <div class="col-sm-4"><img class ="img-responsive"
+                            src="media/skils.png"
                             alt="Descripción de la imagen" />
                     </div>
                 </div>
@@ -109,87 +109,6 @@
         <!-- <script src="assets/js/popper.min.js"></script> -->
     </div>
 
-    <!-- ///////////////////////////////////////////////////////////////////////////////////////////
-                           START SECTION 9 - THE FOOTER  
-///////////////////////////////////////////////////////////////////////////////////////////////-->
-    <footer class="footer">
-
-        <!-- START THE SOCIAL MEDIA CONTENT  -->
-        <div class="footer-sm" style="background-color: #212121;">
-            <div class="container">
-                <div class="row py-4 text-center text-white">
-                    <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
-                        connect with us on social media
-                    </div>
-                    <div class="col-lg-7 col-md-6">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- START THE CONTENT FOR THE CAMPANY INFO -->
-        <div class="container mt-5">
-            <div class="row text-white justify-content-center mt-3 pb-3">
-                <div class="col-12 col-sm-6 col-lg-6 mx-auto">
-                    <h5 class="text-capitalize fw-bold">Campany name</h5>
-                    <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
-                    <p class="lh-lg">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ex obcaecati blanditiis
-                        reprehenderit ab mollitia voluptatem consectetur?
-                    </p>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-                    <h5 class="text-capitalize fw-bold">Products</h5>
-                    <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
-                    <ul class="list-inline campany-list">
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-                    <h5 class="text-capitalize fw-bold">useful links</h5>
-                    <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
-                    <ul class="list-inline campany-list">
-                        <li><a href="#"> Your Account</a></li>
-                        <li><a href="#">Become an Affiliate</a></li>
-                        <li><a href="#">create an account</a></li>
-                        <li><a href="#">Help</a></li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-                    <h5 class="text-capitalize fw-bold">contact</h5>
-                    <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
-                    <ul class="list-inline campany-list">
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <!-- START THE COPYRIGHT INFO  -->
-        <div class="footer-bottom pt-5 pb-5">
-            <div class="container">
-                <div class="row text-center text-white">
-                    <div class="col-12">
-                        <div class="footer-bottom__copyright">
-                            &COPY; Copyright 2024 <a href="#">Company</a> | Created by <a
-                                href="http://codewithpatrick.com" target="_blank">Muriungi</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 </body>
 
 </html>
