--- a/src/index.html
+++ b/src/index.html
@@ -14,63 +14,52 @@
 
     <div class="background">
         <!-- Content goes here -->
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+        <!-- Navbar  -->
+        <nav class="navigationbar navbardesign">
+            <div class="container">
+                <a class="navbar-brand" href="#">Web Zone</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="mx-auto"></div>
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link text-white" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+
+                            <a class="nav-link text-white" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Another Link</a>
+                            <a class="nav-link text-white" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="nav-link text-white" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Contact</a>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </nav>
+
 
         <!-- Presentación Personal-->
         <section id="banner" class="home">
             <div class="container-fluid ">
                 <div class="row">
-                    <div class="col text">
+                    <div class="col-sm-8 text ">
+
                         <h1 class="display-2">Rafa Gutiérrez</h1>
+
                         <p>Hello this is body text, Documentation and examples for common text utilities to control
                             alignment, wrapping, weight, and more.</p>
                     </div>
-                    <div class="col-sm-4"><img class ="img-responsive"
-                            src="media\road.png"
+                    <div class="col-sm-4"><img class="img-responsive" src="media\road.png"
                             alt="Descripción de la imagen" />
                     </div>
                 </div>
@@ -89,8 +78,7 @@
                         <p>Hello this is body text, Documentation and examples for common text utilities to control
                             alignment, wrapping, weight, and more.</p>
                     </div>
-                    <div class="col-sm-4"><img class ="img-responsive"
-                            src="media/skils.png"
+                    <div class="col-sm-4"><img class="img-responsive" src="media/skils.png"
                             alt="Descripción de la imagen" />
                     </div>
                 </div>
@@ -108,7 +96,12 @@
             crossorigin="anonymous"></script>
         <!-- <script src="assets/js/popper.min.js"></script> -->
     </div>
-
+    <!-- Footer Block Start -->
+    <footer id="site-footer bg-primary">
+        <div class="bg-primary  py-5">
+        </div>
+    </footer>
+    <!-- Footer Block Start -->
 </body>
 
 </html>
