--- a/src/index.html
+++ b/src/index.html
@@ -27,20 +27,20 @@
                     <div class="mx-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Home</a>
+                            <a class="nav-link text-white" href="#">Mis objetivos</a>
                         </li>
                         <li class="nav-item">
 
-                            <a class="nav-link text-white" href="#">About</a>
+                            <a class="nav-link text-white" href="#">Computación</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Blog</a>
+                            <a class="nav-link text-white" href="#">Pasatiempos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Pricing</a>
+                            <a class="nav-link text-white" href="#">Acerca de este sitio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Contact</a>
+                            <a class="nav-link text-white" href="#">Contáctame</a>
                         </li>
                     </ul>
                 </div>
@@ -88,6 +88,59 @@
         <!-- Skills-->
 
 
+        <!-- Footer Block Start -->
+        <footer id="site-footer bg-primary text">
+            <div class="container-fluid  bg-primary text">
+                <div class="row">
+                    <div class="col-6 col-lg-4">
+                        <h3 class="fw-bold">Rafa Gutiérrez</h3>
+                        <p class="mb-2">8475-6566</p>
+                        <p>isaacopine@gmail.com</p>
+                    </div>
+                    <div class="col">
+                        <h4>Menu</h4>
+
+
+                        <ul class="list-unstyled pt-2">
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Mis Objetivos</a>
+                            </li>
+                            <li class="nav-item">
+    
+                                <a class="nav-link text-white" href="#">Computación</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Pasatiempos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Acerca de este sitio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Contáctame</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-6 col-lg-3 text-lg-end">
+                        <h4>Social Media Links</h4>
+                        <div class="social-media pt-2">
+                            <a href="#" class="text-light fs-2 me-3"><i class="bi bi-facebook"></i></a>
+                            <a href="#" class="text-light fs-2 me-3"><i class="bi bi-pinterest"></i></a>
+                            <a href="#" class="text-light fs-2 me-3"><i class="bi bi-instagram"></i></a>
+                            <a href="#" class="text-light fs-2"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="d-sm-flex justify-content-between py-1">
+                    <p>2024 © Rafa Dev. All Rights Reserved. </p>
+                    <p>
+                    </p>
+                </div>
+            </div>
+        </footer>
+        <!-- Footer Block Start -->
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
             integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
             crossorigin="anonymous"></script>
@@ -96,12 +149,7 @@
             crossorigin="anonymous"></script>
         <!-- <script src="assets/js/popper.min.js"></script> -->
     </div>
-    <!-- Footer Block Start -->
-    <footer id="site-footer bg-primary">
-        <div class="bg-primary  py-5">
-        </div>
-    </footer>
-    <!-- Footer Block Start -->
+
 </body>
 
 </html>
